prost-canonical-serde/tests/ui/unsupported_rename_all_fields.stderr
error: rename_all_fields is only supported for enums with struct variants, which prost-canonical-serde does not support
 --> tests/ui/unsupported_rename_all_fields.rs:4:9
  |
4 | #[serde(rename_all_fields = "snake_case")]
  |         ^^^^^^^^^^^^^^^^^
